# AvitoTech_TEST

./: Dockerfile  LICENSE  README.md  compose.yaml  docker-compose-local.yaml  entrypoint.sh  main.py  pyproject.toml  wait-for-it.sh
avitotech_test/api/balance/: handlers.py  models.py  router.py  schemas.py  service.py
avitotech_test/balance/: handlers.py  models.py  router.py  service.py
avitotech_test/db/: session.py
migrations/: env.py
migrations/versions/: 058420da9202_initial_migrations_v3.py  5735dd761a51_initial_migrations_v2.py  92202a15b964_initial_migrations.py
