[tool.poetry]
name = "avitotech-test"
version = "0.1.0"
description = ""
authors = ["RchCG <RchChuG@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
environs = "^9.5.0"
alembic = "^1.12.0"
psycopg2 = "^2.9.9"
psycopg = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
